Changes to home Page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cloud ERP | Business Management Solutions</title>
-    <meta name="description" content="Cloud ERP - Automate your business management at very low cost. Best POS, Invoicing, Inventory & Service management solution." />
-    <meta name="author" content="Cloud ERP" />
+    <title>amozTech | Business Management Solutions</title>
+    <meta name="description" content="amozTech POS- Automate your business management at very low cost. Best POS, Invoicing, Inventory & Service management solution." />
+    <meta name="author" content="amozTech" />
 
     <meta property="og:title" content="Cloud ERP | Business Management Solutions" />
     <meta property="og:description" content="Cloud ERP - Automate your business management at very low cost. Best POS, Invoicing, Inventory & Service management solution." />
